# tochno-budet

./: .dockerignore  .env  .gitignore  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/src/apps/: models.py
backend/src/settings/: config.py  db.py  security.py
backend/tests/: conftest.py  test_route.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  Router.jsx
frontend/src/components/Footer/: Footer.jsx  Footer.module.css
frontend/src/components/Header/: Header.jsx  Header.module.css
frontend/src/components/Header/components/: Label.jsx  Label.module.css  Navigate.jsx  Navigate.module.css
frontend/src/components/Home/: Home.jsx
frontend/src/components/Home/components/: About.jsx  VideoIntro.jsx
frontend/src/components/Layout/: Layout.jsx
frontend/src/components/Layout/Header/components/: Label.jsx  Label.module.css  Navigate.jsx  Navigate.module.css
frontend/src/components/Main/: Main.jsx
frontend/src/components/Main/components/: About.jsx  About.module.css
frontend/src/components/Music/: Music.jsx
frontend/src/components/Video/: Video.jsx
nginx/: nginx.conf
